# q

./: .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
atomic-mesh-detection/: .env.example  .gitignore  Cargo.toml  DIRECTORY_STRUCTURE.md  Makefile  README.md  docker-compose.yml
atomic-mesh-detection/analyzers/: bridge-opportunity-finder  competition-analyzer  cycle-detector  flash-loan-enhancer  gas-impact-analyzer  mev-impact-analyzer  path-builder  price-delta-finder  profit-estimator  slippage-calculator  success-predictor
atomic-mesh-detection/calculators/: bridge-cost-calculator  capital-optimizer  gas-cost-calculator  profit-calculator  slippage-calculator  success-probability
atomic-mesh-detection/composers/: capital-splitter  execution-bundle-composer  fallback-planner  risk-diversifier  strategy-combiner  timing-coordinator
atomic-mesh-detection/configs/: bridge-mappings.json  detection.toml  execution-capabilities.json  extractors.toml  gas-models.json  integration.toml  monitoring.toml  nodes.toml  protocol-mappings.toml  strategies.toml  thresholds.toml
atomic-mesh-detection/configs/chains/: arbitrum.toml  base.toml  ethereum.toml  optimism.toml  polygon.toml
atomic-mesh-detection/detectors/: anomaly-detector  congestion-detector  correlation-break-detector  liquidation-finder  liquidity-shock-detector  pool-monitor  price-scanner  protocol-update-detector  state-transition-detector  volatility-spike-detector  whale-movement-detector  whale-tracker
atomic-mesh-detection/docs/: api.md  architecture.md  integration-guide.md  node-setup.md  operations.md  pipelines.md  protocol-support.md  strategies.md
atomic-mesh-detection/extractors/: bridge-state-extractor  gas-extractor  lending-rate-extractor  liquidity-extractor  pending-tx-extractor  price-extractor
atomic-mesh-detection/filters/: bridge-support-filter  capability-filter  competition-filter  execution-window-filter  gas-threshold-filter  liquidity-filter  profitability-filter  protocol-support-filter  risk-filter
atomic-mesh-detection/formatters/: bundle-formatter  execution-bundle-formatter  gas-data-formatter  metadata-formatter  priority-formatter  signal-formatter
atomic-mesh-detection/integration/: bridge-compatibility  bundle-translator  capability-updater  contract-address-resolver  emergency-coordinator  execution-capability-validator  execution-feeder  execution-monitor  failure-pattern-analyzer  feedback-processor  feedback-receiver  gas-coordinator  performance-tracker  protocol-mapper  state-synchronizer  success-pattern-analyzer
atomic-mesh-detection/monitoring/: accuracy-monitor  competition-monitor  execution-success-monitor  failure-monitor  latency-monitor  profit-monitor  protocol-usage-monitor
atomic-mesh-detection/monitoring/dashboards/: detection-stats.json  execution-integration.json  node-health.json  opportunity-tracker.json  protocol-performance.json
atomic-mesh-detection/nodes/node-tools/: block-reader  event-reader  mempool-reader  slot-reader  state-reader
atomic-mesh-detection/nodes/unified-reth/: Cargo.toml
atomic-mesh-detection/optimizers/: bundle-optimizer  capital-allocator  execution-path-optimizer  gas-minimizer  gas-optimizer  route-finder  route-optimizer  size-optimizer  timing-optimizer
atomic-mesh-detection/pipes/: cross-chain-arb.sh  execution-ready.sh  feedback-loop.sh  flash-loan-arb.sh  instant-arb.sh  liquidation-hunt.sh  market-maker.sh  simple-arb.sh  triangular-arb.sh  validated-arb.sh
atomic-mesh-detection/predictors/: block-builder-predictor  bridge-congestion-predictor  competition-predictor  execution-success-predictor  gas-spike-predictor  liquidity-flow-predictor
atomic-mesh-detection/scripts/deploy/: configure-peers.sh  deploy-all.sh  init-databases.sh  setup-integration.sh  setup-nodes.sh
atomic-mesh-detection/scripts/development/: benchmark.sh  integration-test.sh  run-local-testnet.sh  test-pipeline.sh  test-with-execution.sh  validate-integration.sh
atomic-mesh-detection/scripts/operations/: backup-state.sh  emergency-sync.sh  start-detection.sh  stop-detection.sh  (+3 more)
atomic-mesh-detection/tools/: capability-checker  chain-sync-monitor  config-generator  execution-tester  mempool-analyzer  node-manager  opportunity-simulator  performance-profiler  strategy-backtester
atomic-mesh-detection/validators/: atomicity-validator  bridge-readiness-validator  capital-validator  execution-capability-validator  gas-profitability-validator  protocol-compatibility-validator  simulation-validator  state-validator
(+387 files in other folders)
