[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "analyzer"
path = "src/main.rs"

[lib]
name = "analyzer"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

# Reference to compiler's common types
common = { path = "../compiler/src/common" }
