[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "analyzer"
path = "src/main.rs"

[lib]
name = "analyzer"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
lru = "0.12"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
parking_lot = "0.12"
tempfile = "3.8"
md5 = "0.7"
num-traits = "0.2"

# Reference to compiler's common types
common = { path = "../compiler/src/common" }
