[package]
name = "bundle-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Common types from analyzer
common = { path = "../compiler/src/common" }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

# Logging
log = "0.4"
env_logger = "0.11"

# For now, we'll handle encoding manually
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
pretty_assertions = "1.4"
tempfile = "3.0"
