[package]
name = "performance-bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "performance_benchmarks"
harness = false

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }