[package]
name = "monolithic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monolithic"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Only need common - we copy the processing logic directly
common = { workspace = true }